Được tạo bằng Colaboratory

--- a/catr_demo.ipynb
+++ b/catr_demo.ipynb
@@ -565,7 +565,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 817
+          "height": 797
         },
         "id": "oWMwTLA3NHTn",
         "outputId": "8f357459-c782-4bda-8ae4-f75e811c6392"
@@ -1870,23 +1870,24 @@
       "source": [
         "%cd /content/scene_graph_benchmark\n",
         "# ! python tools/demo/demo_image.py --config_file sgg_configs/vrd/R152FPN_vrd_reldn.yaml --img_file demo/trump.jpg --save_file output/woman_fish_3.jpg --visualize_relation MODEL.ROI_RELATION_HEAD.DETECTOR_PRE_CALCULATED False\n",
-        "! python tools/demo/demo_image.py --config_file sgg_configs/vg_vrd/rel_danfeiX_FPN50_imp.yaml --img_file demo/trump.jpg --save_file output/woman_fish_3.jpg --visualize_relation MODEL.ROI_RELATION_HEAD.DETECTOR_PRE_CALCULATED False\n"
+        "! python tools/demo/demo_image.py --config_file sgg_configs/vg_vrd/rel_danfeiX_FPN50_imp.yaml --img_file demo/prime.jpg --save_file output/woman_fish_3.jpg --visualize_relation MODEL.ROI_RELATION_HEAD.DETECTOR_PRE_CALCULATED False\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LZ71JeriN9Bf",
-        "outputId": "9c925c8b-4ba9-4a21-d25d-792c30fc2d3a"
+        "outputId": "9b862818-1c8f-41d7-e4fe-f8e8bea12cd0"
       },
-      "execution_count": 13,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "/content/scene_graph_benchmark\n",
-            "1111111111 {'objects': [{'rect': [1548.60107421875, 124.33199310302734, 2733.6064453125, 1817.51806640625], 'class': 9, 'conf': 0.9930986762046814}, {'rect': [29.609214782714844, 183.51670837402344, 1712.53662109375, 1828.545654296875], 'class': 9, 'conf': 0.9754176139831543}, {'rect': [0.0, 0.0, 471.7668151855469, 1043.5809326171875], 'class': 9, 'conf': 0.20922812819480896}, {'rect': [551.275146484375, 105.87940216064453, 2571.815673828125, 1833.8819580078125], 'class': 9, 'conf': 0.07775405794382095}, {'rect': [103.39544677734375, 182.86997985839844, 1665.415771484375, 1825.770263671875], 'class': 22, 'conf': 0.0769004374742508}], 'relations': [{'subj_id': 0, 'obj_id': 1, 'class': 7, 'conf': 0.0007379736634902656}, {'subj_id': 4, 'obj_id': 1, 'class': 7, 'conf': 0.0004355877172201872}, {'subj_id': 0, 'obj_id': 1, 'class': 5, 'conf': 0.00032573891803622246}, {'subj_id': 1, 'obj_id': 4, 'class': 7, 'conf': 0.00023330867406912148}, {'subj_id': 4, 'obj_id': 1, 'class': 3, 'conf': 7.641103002242744e-05}, {'subj_id': 1, 'obj_id': 3, 'class': 7, 'conf': 5.3477546316571534e-05}, {'subj_id': 3, 'obj_id': 1, 'class': 3, 'conf': 3.5317927540745586e-05}, {'subj_id': 1, 'obj_id': 4, 'class': 3, 'conf': 3.0379907911992632e-05}, {'subj_id': 0, 'obj_id': 3, 'class': 7, 'conf': 2.0185532775940374e-05}, {'subj_id': 1, 'obj_id': 0, 'class': 7, 'conf': 1.90685623238096e-05}, {'subj_id': 3, 'obj_id': 1, 'class': 7, 'conf': 1.7091173504013568e-05}, {'subj_id': 0, 'obj_id': 4, 'class': 7, 'conf': 1.334671560471179e-05}, {'subj_id': 1, 'obj_id': 0, 'class': 1, 'conf': 1.1794983038271312e-05}, {'subj_id': 0, 'obj_id': 4, 'class': 5, 'conf': 1.1165539945068303e-05}]}\n",
+            "Using frequency bias:  /content/output/visualgenome/label_danfeiX_clipped.freq_prior.npy\n",
+            "{'objects': [{'rect': [432.9056091308594, 170.58583068847656, 571.4830932617188, 210.69818115234375], 'class': 54, 'conf': 0.9617440104484558, 'attr': [158, 272, 320, 13, 225, 258, 361, 86, 211, 19, 259, 195, 56, 397, 128, 147], 'attr_conf': [0.003469299990683794, 0.003451139898970723, 0.0034257927909493446, 0.003370805876329541, 0.0032587761525064707, 0.0032420640345662832, 0.0032244722824543715, 0.0032173662912100554, 0.003193048993125558, 0.003178911516442895, 0.003175672609359026, 0.003158045234158635, 0.0031526503153145313, 0.0031497725285589695, 0.003141227876767516, 0.0031025605276226997]}, {'rect': [658.1575927734375, 133.76202392578125, 779.93017578125, 166.5752410888672], 'class': 54, 'conf': 0.9567733407020569, 'attr': [320, 272, 13, 158, 258, 211, 259, 225, 361, 19, 86, 44, 128, 338, 353, 195], 'attr_conf': [0.0034613797906786203, 0.0033685285598039627, 0.0033485842868685722, 0.0033431430347263813, 0.0032859225757420063, 0.0032756258733570576, 0.003241593251004815, 0.003229849971830845, 0.0032205013558268547, 0.003213439602404833, 0.00318397325463593, 0.0031390520744025707, 0.0031208666041493416, 0.0031177850905805826, 0.0030861853156238794, 0.003084704279899597]}, {'rect': [922.8056030273438, 174.88031005859375, 1036.897705078125, 209.37966918945312], 'class': 54, 'conf': 0.9439215064048767, 'attr': [320, 272, 13, 158, 258, 225, 19, 211, 361, 259, 44, 86, 338, 195, 56, 376], 'attr_conf': [0.003483528271317482, 0.003395390696823597, 0.00335218315012753, 0.0033010710030794144, 0.003251880407333374, 0.0032452375162392855, 0.0032401983626186848, 0.0032241088338196278, 0.00321201141923666, 0.0032113175839185715, 0.003146936185657978, 0.003146408125758171, 0.0031257648952305317, 0.003091550199314952, 0.00309091922827065, 0.00308893877081573]}, {'rect': [128.384765625, 326.4512634277344, 242.3817138671875, 460.84619140625], 'class': 58, 'conf': 0.853492021560669, 'attr': [], 'attr_conf': []}, {'rect': [22.72481346130371, 41.278648376464844, 447.7938232421875, 798.6666870117188], 'class': 78, 'conf': 0.9238975048065186, 'attr': [], 'attr_conf': []}, {'rect': [551.1696166992188, 66.108154296875, 833.9791870117188, 796.1876831054688], 'class': 78, 'conf': 0.9001609683036804, 'attr': [], 'attr_conf': []}, {'rect': [374.67303466796875, 93.07991790771484, 691.7337646484375, 798.6666870117188], 'class': 78, 'conf': 0.8977100849151611, 'attr': [], 'attr_conf': []}, {'rect': [790.0218505859375, 97.85494232177734, 1136.3807373046875, 794.87890625], 'class': 78, 'conf': 0.8952562212944031, 'attr': [], 'attr_conf': []}, {'rect': [493.00567626953125, 302.521728515625, 563.7154541015625, 501.455322265625], 'class': 128, 'conf': 0.9913780689239502, 'attr': [61, 195, 128, 143, 13, 86, 134, 211, 165, 185, 258], 'attr_conf': [0.0033172699622809887, 0.0033154545817524195, 0.003213109914213419, 0.0031741438433527946, 0.0031180460937321186, 0.003094466170296073, 0.00307532143779099, 0.0030689979903399944, 0.0030630186665803194, 0.0030554011464118958, 0.003048688406124711]}, {'rect': [704.304443359375, 245.29977416992188, 756.2694702148438, 421.86126708984375], 'class': 128, 'conf': 0.9784474968910217, 'attr': [195, 61, 128, 143, 86, 13, 397, 258, 73, 211, 320, 185, 134, 296], 'attr_conf': [0.0034131917636841536, 0.0033036749809980392, 0.0032193828374147415, 0.0031910722609609365, 0.0031763820443302393, 0.003168111899867654, 0.003116145497187972, 0.0031127193942666054, 0.003112058388069272, 0.0030820139218121767, 0.003072247840464115, 0.0030704177916049957, 0.0030474341474473476, 0.003043199423700571]}, {'rect': [270.9914855957031, 279.2259216308594, 345.6285400390625, 498.263671875], 'class': 128, 'conf': 0.9608058929443359, 'attr': [195, 61, 128, 13], 'attr_conf': [0.0031904373317956924, 0.0031284403521567583, 0.0030762124806642532, 0.003039020113646984]}, {'rect': [962.8768310546875, 279.8567810058594, 1025.386962890625, 433.7920837402344], 'class': 128, 'conf': 0.9280891418457031, 'attr': [195, 61, 128, 86, 13], 'attr_conf': [0.0032832061406224966, 0.0031696842052042484, 0.003081618808209896, 0.003069427330046892, 0.0030667113605886698]}], 'relations': [{'subj_id': 6, 'obj_id': 8, 'class': 48, 'conf': 0.8470412492752075}, {'subj_id': 4, 'obj_id': 10, 'class': 48, 'conf': 0.8460993766784668}, {'subj_id': 5, 'obj_id': 9, 'class': 48, 'conf': 0.8390421271324158}, {'subj_id': 5, 'obj_id': 8, 'class': 48, 'conf': 0.8325877785682678}, {'subj_id': 6, 'obj_id': 0, 'class': 48, 'conf': 0.8098523616790771}, {'subj_id': 5, 'obj_id': 1, 'class': 48, 'conf': 0.8094692826271057}, {'subj_id': 7, 'obj_id': 2, 'class': 48, 'conf': 0.7991317510604858}, {'subj_id': 7, 'obj_id': 11, 'class': 48, 'conf': 0.797173798084259}, {'subj_id': 4, 'obj_id': 3, 'class': 20, 'conf': 0.7471389174461365}, {'subj_id': 2, 'obj_id': 7, 'class': 31, 'conf': 0.637488067150116}, {'subj_id': 1, 'obj_id': 5, 'class': 31, 'conf': 0.5824743509292603}, {'subj_id': 8, 'obj_id': 6, 'class': 31, 'conf': 0.5795391201972961}, {'subj_id': 9, 'obj_id': 5, 'class': 31, 'conf': 0.5393016934394836}, {'subj_id': 0, 'obj_id': 6, 'class': 31, 'conf': 0.5140378475189209}, {'subj_id': 5, 'obj_id': 0, 'class': 48, 'conf': 0.5116439461708069}, {'subj_id': 11, 'obj_id': 7, 'class': 31, 'conf': 0.4928811490535736}, {'subj_id': 6, 'obj_id': 1, 'class': 48, 'conf': 0.4569402039051056}, {'subj_id': 10, 'obj_id': 4, 'class': 31, 'conf': 0.4437825679779053}, {'subj_id': 8, 'obj_id': 5, 'class': 31, 'conf': 0.4183266758918762}, {'subj_id': 3, 'obj_id': 4, 'class': 30, 'conf': 0.301462322473526}, {'subj_id': 4, 'obj_id': 0, 'class': 48, 'conf': 0.16875192523002625}, {'subj_id': 1, 'obj_id': 6, 'class': 31, 'conf': 0.0739516168832779}, {'subj_id': 0, 'obj_id': 5, 'class': 31, 'conf': 0.04080842435359955}, {'subj_id': 0, 'obj_id': 4, 'class': 31, 'conf': 0.01553128007799387}, {'subj_id': 5, 'obj_id': 6, 'class': 29, 'conf': 0.0010683754226192832}, {'subj_id': 6, 'obj_id': 5, 'class': 29, 'conf': 0.0007773495744913816}, {'subj_id': 6, 'obj_id': 4, 'class': 29, 'conf': 0.0002479670220054686}, {'subj_id': 7, 'obj_id': 5, 'class': 29, 'conf': 0.0001401024783262983}, {'subj_id': 4, 'obj_id': 6, 'class': 29, 'conf': 0.00011131827341159806}, {'subj_id': 5, 'obj_id': 7, 'class': 29, 'conf': 7.012797868810594e-05}]}\n",
             "save results to: output/woman_fish_3.jpg\n"
           ]
         }
@@ -2112,11 +2113,11 @@
         "!wget https://penzhanwu2.blob.core.windows.net/sgg/sgg_benchmark/sgg_model_zoo/visualgenome/imp_usefpFalse_lr0.005_bsz4_featstep2/model_final.pth "
       ],
       "metadata": {
-        "id": "CleT0BHYhBMW",
-        "outputId": "d5a59926-ef86-4119-9d63-05c7ae19bfb5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CleT0BHYhBMW",
+        "outputId": "d5a59926-ef86-4119-9d63-05c7ae19bfb5"
       },
       "execution_count": 18,
       "outputs": [
@@ -2139,6 +2140,27 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Convert JSON to graph"
+      ],
+      "metadata": {
+        "id": "-58rGjNX7XfD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content\n",
+        "! git clone"
+      ],
+      "metadata": {
+        "id": "Pw28b-6u7ZRn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
